<resources>
    <string name="app_name">Been Together</string>
    <string name="menu_calendar">Calerdar</string>
    <string name="menu_setting">Setting</string>
    <string name="title_note">THÊM GHI CHÚ</string>
    <string name="content_note">NHẬP NỘI DUNG</string>
    <string name="created_date">NGÀY TẠO GHI CHÚ</string>
    <string name="title_image">CHỌN MỘT ẢNH</string>
    <string name="btn_close_dialog">ĐÓNG</string>
    <string name="btn_delete_dialog">XÓA</string>
    <string name="btn_edit_dialog">SỬA</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="nick_name_1">Nickname 1</string>
    <string name="nick_name_2">Nickname 2</string>

    <string name="change_avatar">Đổi ảnh đại diện</string>
    <string name="change_avatar_shape">Đổi hình dạng ảnh đại diện</string>
    <string name="change_display_name">Đổi tên hiển thị</string>
    <string name="change_birthday">Đổi ngày sinh nhật</string>
    <string name="change_sex">Đổi giới tính</string>
</resources>
