<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10">

    <TextView
        android:id="@+id/txtContentDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:fontFamily="@font/amita"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="#2B2A2A" />

    <TextView
        android:id="@+id/txtCreatedDateDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:fontFamily="@font/amita"
        android:gravity="end"
        android:paddingRight="10dp"
        android:textAlignment="viewEnd"
        android:textColor="#2B2A2A"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageNoteCalendarDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:scaleType="fitXY" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="2"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCloseDialog"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:text="@string/btn_close_dialog"
            android:textColor="#DC507F"
            android:textSize="16dp" />

        <Button
            android:id="@+id/btnDeleteDialog"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_delete_dialog"
            android:textColor="#DC507F"
            android:textSize="16dp" />

        <Button
            android:id="@+id/btnEditDialog"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_edit_dialog"
            android:textColor="#DC507F"
            android:textSize="16dp" />
    </LinearLayout>
</LinearLayout>